Correções ENUM Rules para pegar a listagem!
